--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,9 +15,11 @@
     justify-content: center;
     flex-wrap: wrap;
 }
-.header .nav-genres button {
+
+.genre-button-div {
+    margin-top: 0.5em;
     margin-right: 0.5em;
-    margin-bottom: 1em;
+
 }
 
 .header .search {
