--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,10 @@
 .header {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 10em;
+    position: fixed;
+    top: 0;
 }
 
 .header .nav-principal {
