--- a/src/components/MoviesList.css
+++ b/src/components/MoviesList.css
@@ -7,7 +7,7 @@
 }
 
 .card .card-img-top {
-    max-height: 284px;
+    height: 284px;
     max-width: 208px;
     align-self: center;
     padding-bottom: 1em;
